Styling fix for add pipeline dropdown zindex
Was not overlapping with the edit pipeline gear on the dashboard
correctly

--- a/server/webapp/WEB-INF/rails/app/assets/new_stylesheets/single_page_apps/new_dashboard.scss
+++ b/server/webapp/WEB-INF/rails/app/assets/new_stylesheets/single_page_apps/new_dashboard.scss
@@ -184,6 +184,7 @@ body {
 .new-pipeline-button {
   float:    right;
   position: relative;
+  z-index:  1;
 
   > button {
     padding: 0 35px;
